Re #INTRD-24735 Wildfly v.33, Keycloak v.25 and JVM v.21 migration - pom.xml, opencell-model, wildfly-mdc-logger and wildfly-cache-scripts modules